Fix column overflow on mobile

--- a/src/sass/_base/_responsive.scss
+++ b/src/sass/_base/_responsive.scss
@@ -18,3 +18,17 @@
 
 // Import MQ mixin
 @import '../_vendors/mq';
+
+// Stops columns overflowing on mobile
+// ¯\_(ツ)_/¯
+.columns {
+  margin: 0;
+}
+
+@include mq($from: mobile) {
+  .columns {
+    margin-left: -.75rem;
+    margin-right: -.75rem;
+    margin-top: -.75rem;
+  }
+}
